Ajout Video/Image/Paragraph...

--- a/index.html
+++ b/index.html
@@ -13,13 +13,51 @@
 <body>
     <nav>
         <ul>
-         <li><a href="#">Lien A</a></li>
-         <li><a href="#">Lien B</a></li>
-         <li><a href="#">Lien C</a></li>
+         <li><a href="#p1">Partie 1</a></li>
+         <li><a href="#p2">Partie 2</a></li>
+         <li><a href="#p3">Partie 3</a></li>
+         <li><a href="#p4">Partie 4</a></li>
         </ul>
      </nav>
     <!-- Commentaire H1 -->
-    <h1>Cours 1 HTML/CSS</h1>
-   
+    <h1 id="p1">Cours 1 HTML/CSS</h1>
+
+ <p>
+    <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae distinctio perspiciatis, eos cumque labore impedit quisquam aspernatur minus modi voluptate. Quae, nobis culpa cumque fuga harum molestiae minus nesciunt. Ut?</em>
+</p>
+ <p>
+    <strong>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut quo sint laudantium omnis et nam in provident quasi! Ullam neque natus voluptates nostrum molestias commodi laudantium blanditiis quas eveniet debitis?</strong>
+</p>
+ <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate id neque velit suscipit a possimus veritatis, blanditiis autem earum nesciunt. Sunt beatae quos quas obcaecati ad illum incidunt repellat.
+</p>
+ <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, qui ab repudiandae iusto, impedit voluptates neque eligendi facilis ratione voluptatum distinctio doloribus libero ad suscipit numquam beatae excepturi accusantium placeat quod! Deserunt velit qui doloribus.
+</p>
+<section>
+    <h2 id="p2">Les listes ordonnées</h2>
+    <ol>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum.</li>
+    </ol>
+</section>
+
+<section>
+    <h3 id="p3">Les images</h3>
+    <img src="./img/icon.png" alt="image icon" height="200px" width="auto">
+    <legend><em>image du log HTML5</em></legend>
+</section>
+
+<section>
+    <h4 id="p4">Les Liens</h4>
+    <a target="_blank" href="https://en.wikipedia.org/wiki/HTML">En savoir plus sur HTML5</a>
+</section>
+
+<section>
+    <h4>Les vidéos</h4>
+    <video src="./vidéo/video.mp4" width="700px" controls loop autoplay>Vidéo HTML</video>
+</section>
 </body>
 </html>
